apps/k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: milestone2-kb
spec:
  selector:
    app: fastapi
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: fastapi
      name: fastapi
