apps/k8s/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: milestone2-kb
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "m2.test"
      http:
        paths:
        - pathType: Prefix
          path: "/api(/|$)(.*)"
          backend:
            service:
              name: fastapi-service
              port:
                name: fastapi
